// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetails Unknown transaction returns empty string 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgBeginRedelegate transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000283
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #726616 
      </router-link-stub>
      
    @ Jun 19th 2019 14:45:43
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgCreateValidator transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgDelegate transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000166
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #726599 
      </router-link-stub>
      
    @ Jun 19th 2019 14:43:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgDeposit transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000069
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626103 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgEditValidator transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSend transaction item from other to you 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000037
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #1086769 
      </router-link-stub>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSend transaction item from session user to other 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000037
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #1086769 
      </router-link-stub>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSend transaction item to yourself 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000037
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #1086769 
      </router-link-stub>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSend transaction item unrelated to session user 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    validators="[object Object]"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Sent
      
        <b>
           0.2345
        </b>
         
        <span>
           ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
      From 
      
      <div
        class="bech32-address"
      >
        <div
          class="address"
          id="address"
        >
          
    cosmos…dlkj
  
        </div>
         
        <div
          class="copied"
        >
          <i
            class="material-icons"
          >
            check
          </i>
          <span>
            Copied
          </span>
        </div>
      </div>
       to 
      
      <div
        class="bech32-address"
      >
        <div
          class="address"
          id="address"
        >
          
    cosmos…dlkj
  
        </div>
         
        <div
          class="copied"
        >
          <i
            class="material-icons"
          >
            check
          </i>
          <span>
            Copied
          </span>
        </div>
      </div>
       
      <span>
         - (Sent via Lunie)
      </span>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000037
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #1086769 
      </router-link-stub>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSetWithdrawAddress transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSetWithdrawValidatorCommission transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSubmitProposal transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000069
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgUndelegate transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.004141
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #1248479 
      </router-link-stub>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgUnjail transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgVote transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.000069
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626103 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgWithdrawDelegationReward transaction item 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
        ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;
